syntax = "proto3";

message CarrotFileResponse {
  int32 return = 1;
  string buffer = 2;
}